[tool.poetry]
name = "smi-to-ass"
version = "0.1.0"
description = ""
authors = ["luhavis <luhavis.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "smi_to_ass"}]


[tool.poetry.dependencies]
python = "^3.11"
chardet = "^5.2.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
